atcodertools_gen.sh

--- a/atcodertools.toml
+++ b/atcodertools.toml
@@ -1,9 +1,9 @@
 [codestyle]
 indent_type = 'space'
 indent_width = 4
-workspace_dir = '/mnt/y/2019/pg/ABC/'
+workspace_dir = '/mnt/y/2019pg/ABC/'
 lang = 'cpp'
-template_file='/mnt/y/2019/pg/my_template.cpp'
+template_file='/mnt/y/2019pg/my_template.cpp'
 [etc]
 download_without_login=false
 parallel_download=false
